<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- title -->


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:drawablePadding="3dp"
        android:gravity="center"
        android:paddingBottom="12dp"
        android:paddingTop="12dp"
        android:text="@string/checkPassWord"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <EditText

        android:id="@+id/et_inputpassword_password"
        android:layout_width="match_parent"
        android:digits="@string/chinese"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_password"
        android:inputType="textPassword" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        >

        <Button
            android:layout_marginLeft="50dp"
            android:id="@+id/bt_inputpassword_sure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sure" />

        <Button
            android:layout_alignParentRight="true"
            android:layout_marginRight="50dp"
            android:id="@+id/bt_inputpassword_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/cance" />
    </RelativeLayout>

</LinearLayout>