<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/backgroudcolor"
    android:orientation="vertical">

    <include layout="@layout/title" />

    <LinearLayout
        android:id="@+id/device_gsensor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1px"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:visibility="gone">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/device_gsensor"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/wifi_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1px"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:visibility="gone">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/WIFI_setting"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sdcard_format"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1px"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/SD_format"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/device_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1px"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/device_reset"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1px"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/version"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:textSize="16sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/sdcard_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1px"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:gravity="center_vertical"
        android:paddingTop="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/sdcard_life"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:textSize="16sp" />
        <ImageView
            android:id="@+id/sd_info_arrow"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:padding="5dp"
            android:src="@mipmap/ic_right_arrow" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/check_firmware_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1px"
        android:background="@color/white"
        android:orientation="horizontal"
        android:visibility="gone"
        tools:visibility="visible"

        android:paddingBottom="5dp"
        android:gravity="center_vertical"
        android:paddingTop="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/check_firmware"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/check_firmware_arrow"
            android:padding="5dp"
            android:src="@mipmap/ic_right_arrow" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/firmware_update_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_marginTop="1px"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:clickable="false"
        android:gravity="center_vertical"
        android:paddingTop="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:id="@+id/firmware_update"
            android:textColor="@color/backgroudcolor"
            android:text="@string/firmware_update"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:padding="5dp"
            android:id="@+id/firmware_update_arrow"
            android:src="@mipmap/ic_right_arrow" />

    </LinearLayout>
</LinearLayout>